test/compile-fail/import-self.as
import import_self from "./import-self";
